--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     padding: 0px;
     margin: 0px;
-    color: white;
+    color: black;
+
 }
 
 
@@ -18,11 +19,13 @@
 
 
 .display{
-    height: 95%;
-    width: 100%;
-    border-radius: 10px;
 
+
+    height: 95%;
+    width: 90%;
+    border-radius: 30px;
     overflow: hidden;
+    border: 100px;
 
 
 }
@@ -30,22 +33,25 @@
 .buttons{
     height: 90px;
     width: 400px;
+    margin: 0px;
 
 }
 button{
 
-    border-radius: 10px;
-    height: 100%;
-    width: 97px;
-    background-color: black;
+    border-radius: 50px;
+    height: 90%;
+    width: 87px;
+    background-color: white;
 }
 
 .calculator{
-    background-color: azure;
+    width: 350px;
+    background: darkgray;
+ 
 }
 
 
 .double{
-    width: 197px;
+    width: 180px;
 }
 
